# humana-hackathon-2026

./: .dockerignore  .gitignore  CLAUDE.md  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  SENTINEL_SETUP.md  demo_roi.py  main.py  pyproject.toml  sentinel_demo.py
backend/adk_agents/roi_gatekeeper/: agent.py
backend/agents/claim_assist/: agent.py
backend/artifacts/evaluation/: latest.json  latest.md
backend/benefits/: README.md  __init__.py  agent.py  aliases.py  answer.py  contract.py  cost.py  dev_cli.py  env.txt  events.py  kb.py  loader.py  models.py  providers.py  settings.py
backend/benefits/.adk/: session.db
backend/benefits/clients/: __init__.py  csv_client.py  mapping.py
backend/evaluation/: corpus.json
backend/src/: events.py  models.py  settings.py
backend/src/agents/: __init__.py  benefits.py  claim_readiness.py  claim_story.py  delegation.py  orchestrator.py  roi_gatekeeper.py  sentinel.py  session_context.py
backend/src/api/: __init__.py  auth.py  operations.py  prevention.py  support.py  voice.py
backend/src/auth/: __init__.py  bootstrap.py  (+8 more)
backend/static/: index.html  operations.html
backend/tests/: claim_fixtures.py  conftest.py  test_auth.py  test_benefits.py  test_claim_models.py  test_claim_readiness_agent.py  test_claim_readiness_service.py  test_claim_story_agent.py  test_claim_story_integration.py  test_claim_story_service.py  test_claims_repository.py  test_clients.py  test_delegation.py  test_evaluation_harness.py  test_event_log.py  test_main_app.py  test_member_records_client.py  test_metrics.py  test_notification.py  test_operations_api.py  test_operations_seed.py  test_operations_store.py  test_prevention_api.py  test_prevention_events.py  test_prevention_scanner.py  test_prevention_store.py  test_roi_check.py  test_sentinel.py  test_sentinel_data.py  test_session_context.py  test_support_api.py  test_voice_api.py  test_voice_orchestrator.py
src/backend/: .env.example  SENTINEL_SETUP.md  pyproject.toml  requirements-sentinel.txt  sentinel_demo.py  settings.py
(+190 files in other folders)
