[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk>=2.4.0",
    "google-cloud-bigquery>=3.42.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
