[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.1",
    "google-adk>=2.4.0",
    "google-cloud-bigquery>=3.42.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.51.0",
]

[project.optional-dependencies]
bigquery = [
    "db-dtypes>=1.7.1",
    "google-cloud-bigquery>=3.42.2",
    "pandas>=3.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# No [build-system], so the package isn't installed; put the project root on
# sys.path explicitly rather than relying on rootdir inference.
pythonpath = ["."]
testpaths = ["tests"]
