[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-adk>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
# No [build-system], so the package isn't installed; put the project root on
# sys.path explicitly rather than relying on rootdir inference.
pythonpath = ["."]
testpaths = ["tests"]
